<resources>
    <string name="app_name">DreamsTracker</string>
    <string name="action_logout">Сменить пользователя</string>
    <string name="action_send">Сохранить</string>
    <string name="delete">Удалить сон</string>
    <string name="action_registration">Регистрация</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="sign_in">Войти</string>

    <string name="warning">Внимание</string>
    <string name="warning_message">Вы действительно хотите закрыть приложение?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <string name="warning_delete_dream">Вы уверены, что хотите удалить данный сон?</string>

    <string name="attention">Внимание</string>

    <string name="your_text">Введите текст</string>

    <string name="adviceDuration">Совет</string>

    <string name="ok">OK</string>

    <string name="user_was_added">Пользователь успешно зарегистрирован</string>

    <string name="fields_is_empty">Поля не могут быть пустыми</string>

    <string name="dream_was_deleted">Сон успешно удален</string>

    <string name="username_incorrect">Неверный логин или пароль</string>
    <string name="no_connection_to_server">Нет соединения с сервером</string>

    <string name="error_registration">Данный пользователь уже существует</string>

    <string name="no_response_from_server">Нет ответа от сервера</string>

    <string name="no_data_available">Нет записей о снах</string>

    <string name="description_new_dream">Добавить новый сон</string>
    <string name="description_button_login">Войти</string>

    <string name="description_advice">Оценка сна</string>

    <string name="dream_duration">Продолжительность сна:</string>

    <string name="hint_dream_text">Описание сна</string>
    <string name="hint_dream_duration">Продолжительность сна (часы)</string>
    <string name="hint_dream_name">Название сна</string>

    <string name="data_incorrect">Не все поля заполнены</string>

    <string name="dream_not_saved">Упс, что-то пошло не так. Сон не сохранился.</string>
    <string name="dream_not_deleted">Упс, что-то пошло не так. Сон не удалился.</string>
    <string name="dream_was_saved">Сон успешно сохранен</string>

    <string name="hours"> ч</string>
    <string name="empty">" "</string>

    <string name="please_enter_username">Вход</string>
    <string name="registration">Регистрация</string>

    <string name="username">логин</string>
    <string name="password">пароль</string>
</resources>